# hr-data-dashboard

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.streamlit/: config.toml
src/hr_dashboard/: __init__.py  app.py  data_manager.py  filters.py
src/hr_dashboard/pages/: compensation.py  geography.py  org_chart.py  overview.py
src/hr_dashboard/utils/: chart_helpers.py  data_health.py  export.py
src/hr_dashboard/views/: attrition.py  compensation.py  data_tables.py  geography.py  org_chart.py  org_network.py  overview.py  performance.py
tests/: __init__.py  test_data_manager.py
