[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hr-data-dashboard"
version = "0.1.0"
description = "Interactive Streamlit dashboard for HR Data Generator"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "HR Data Dashboard Team" }
]
keywords = ["hr", "dashboard", "streamlit", "visualization", "analytics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "streamlit>=1.32.0",
    "hr-data-generator>=0.1.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.18.0",
    "networkx>=3.0",
    "pyvis>=0.3.2",
    "pydeck>=0.8.0",
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hr_dashboard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
